WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270186
REGRESSION(
275377@main
): [Win] GLContext::makeContextCurrent calls purecall for WebGL tests
https://bugs.webkit.org/show_bug.cgi?id=270186
Summary
REGRESSION(275377@main): [Win] GLContext::makeContextCurrent calls purecall f...
Fujii Hironori
Reported
2024-02-27 13:21:05 PST
After
275377@main
, WinCairo is randomly crashing for WebGL tests.
https://build.webkit.org/results/WinCairo-64-bit-Debug-Tests/275377@main%20(21936)/CrashLog_0730_2024-02-27_14-18-53-673.txt
# 11 Id: 16f0.2060 Suspend: 1 Teb: 00000040`63730000 Unfrozen # Child-SP RetAddr Call Site 00 00000040`64afea40 00007ff9`0b966eaa ucrtbase!abort+0x4e 01 00000040`64afea70 00007ff8`d8eb87a5 VCRUNTIME140!purecall+0x1a 02 00000040`64afeaa0 00007ff8`ea5715ed WebCore!WebCore::GLContext::makeContextCurrent(void)+0x55 [C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebCore\platform\graphics\egl\GLContext.cpp @ 440] 03 00000040`64afeb10 00007ff8`ea56873d WebKit2!WebKit::WCSceneContext::makeContextCurrent(void)+0x3d [C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\GPUProcess\graphics\wc\WCSceneContext.cpp @ 47] 04 00000040`64afeb50 00007ff8`ea5525cc WebKit2!WebKit::WCScene::update(struct WebKit::WCUpdateInfo * update = 0x00000149`b95f9cc0)+0x5d [C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\GPUProcess\graphics\wc\WCScene.cpp @ 97] 05 00000040`64aff300 00007ff8`ea552547 WebKit2!WebKit::RemoteWCLayerTreeHost::update::<lambda_2>::operator()(void)+0x3c [C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\GPUProcess\graphics\wc\RemoteWCLayerTreeHost.cpp @ 103] 06 00000040`64aff490 00007ff8`ea521695 WebKit2!WTF::Detail::CallableWrapper<`lambda at C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\GPUProcess\graphics\wc\RemoteWCLayerTreeHost.cpp:101:46',void>::call(void)+0x17 [C:\BW\WinCairo-64-bit-Debug-Build\build\WebKitBuild\Debug\WTF\Headers\wtf\Function.h @ 53] 07 00000040`64aff4c0 00007ff8`eb540081 WebKit2!WTF::Function<void (void)+0x85 [C:\BW\WinCairo-64-bit-Debug-Build\build\WebKitBuild\Debug\WTF\Headers\wtf\Function.h @ 82] 08 00000040`64aff500 00007ff8`eb541a5f WebKit2!IPC::StreamConnectionWorkQueue::processStreams(void)+0x121 [C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\Platform\IPC\StreamConnectionWorkQueue.cpp @ 159] 09 00000040`64aff610 00007ff8`eb541a07 WebKit2!IPC::StreamConnectionWorkQueue::startProcessingThread::<lambda_0>::operator()(void)+0x2f [C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\Platform\IPC\StreamConnectionWorkQueue.cpp @ 125] 0a 00000040`64aff670 00007ff9`03608814 WebKit2!WTF::Detail::CallableWrapper<`lambda at C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\Platform/IPC/StreamConnectionWorkQueue.cpp:123:17',void>::call(void)+0x17 [C:\BW\WinCairo-64-bit-Debug-Build\build\WebKitBuild\Debug\WTF\Headers\wtf\Function.h @ 53] 0b 00000040`64aff6a0 00007ff9`0369b48b WTF!WTF::Function<void (void)+0x84 [C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WTF\wtf\Function.h @ 82] 0c 00000040`64aff6e0 00007ff9`03776243 WTF!WTF::Thread::entryPoint(struct WTF::Thread::NewThreadContext * newThreadContext = 0x00000149`b95da830)+0x1cb [C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WTF\wtf\Threading.cpp @ 259] 0d 00000040`64aff730 00007ff8`fd686b4c WTF!WTF::wtfThreadEntryPoint(void * data = 0x00000149`b95da830)+0x13 [C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WTF\wtf\win\ThreadingWin.cpp @ 151] 0e 00000040`64aff760 00007ff9`03f24de0 ucrtbase!recalloc+0x5c 0f 00000040`64aff790 00007ff9`1541ec4b KERNEL32!BaseThreadInitThunk+0x10 10 00000040`64aff7c0 00000000`00000000 ntdll!RtlUserThreadStart+0x2b
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2024-02-27 13:31:30 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25188
EWS
Comment 2
2024-02-27 13:36:13 PST
Committed
275402@main
(cc42f3bc02dc): <
https://commits.webkit.org/275402@main
> Reviewed commits have been landed. Closing PR #25188 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-02-27 13:37:15 PST
<
rdar://problem/123712978
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug