REGRESSION(275377@main): [Win] GLContext::makeContextCurrent calls purecall for WebGL tests https://bugs.webkit.org/show_bug.cgi?id=270186

Unreviewed crash fix.

275377@main introduced GLContextWrapper class to track the current GL
context. ~GLContextWrapper unsets the current context if it is `this`
context.

GraphicsContextGLTextureMapperANGLE class inherits both
GraphicsContextGLANGLE and GLContextWrapper classes in the following
order.

> class GraphicsContextGLTextureMapperANGLE : public GraphicsContextGLANGLE, public GLContextWrapper {

Thus, destructors are called in the following order

1. ~GraphicsContextGLTextureMapperANGLE
2. ~GLContextWrapper
3. ~GraphicsContextGLANGLE

~GLContextWrapper unsets the current context, but
~GraphicsContextGLANGLE makes `this` context current again.
GLContextWrapper base class should be before GraphicsContextGLANGLE.

* Source/WebCore/platform/graphics/texmap/GraphicsContextGLTextureMapperANGLE.h:

Canonical link: https://commits.webkit.org/275402@main